--- a/index.html
+++ b/index.html
@@ -234,11 +234,29 @@
             </section>
         </section>
         <button class="hidden-btn">View All</button>
-
-
-
     </main>
 
 </body>
+<footer>
+
+    <div class="footer-links">
+        <h1>GOAL</h1>
+        <hr>
+        <div class="links">
+            <h6>Contact Us</h6>
+            <h6>Terms of Service</h6>
+            <h6> Privacy Policy </h6>
+            <h6>Privacy Settings</h6>
+            <h6>Goal App</h6>
+            <h6>Goal Live</h6>
+        </div>
+    </div>
+    <div class="social">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-dribbble"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+    </div>
+</footer>
 
 </html>
