--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <main>
         <div class="header">
             <div class="heading-text">
-                <h1>The Greatest <br> show on the <br> earth</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply <br>
-                    random text. It has roots in a piece of classical Latin literature <br> from 45 BC, making it over
-                    2000
-                    years old.</p>
+                <h1>The Greatest show <br> on the earth</h1>
+                <p>Contrary to popular belief, is not<br> is not simply
+                    random text. <span> It has roots in a piece of <br> from 45 BC, making it
+                        over
+                        2000
+                        years old.</span></p>
                 <button class="watch-btn">Watch Live <i class="fa-solid fa-angle-right"></i></button>
             </div>
             <div class="heading-img">
@@ -34,13 +35,15 @@
             </div>
         </div>
         <section class="match-tamplates">
-            <div class="upcoming">
+            <section class="upcoming">
+                <!-- <div class="upcoming"> -->
                 <div class="match-link">
                     <h3>Upcoming Match</h3>
                     <h3>All Group</h3>
                     <h3 id="red">Blogs</h3>
                 </div>
-            </div>
+                <!-- </div> -->
+            </section>
             <section class="grid-tamp">
                 <div class="tamplates">
                     <div class="tamp-img">
@@ -63,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tamplates">
+                <!-- <div class="tamplates">
                     <div class="tamp-img">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -83,7 +86,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="tamplates">
                     <div class="tamp-img">
                         <img src="assets/Blog Image.png" alt="">
